<resources>
    <string name="app_name">スマート点呼</string>
    <string name="action_log_in">ログイン</string>
    <string name="action_log_out">ログアウト</string>
    <string name="action_next">次へ</string>
    <string name="action_menu">メニュー</string>
    <string name="action_no_exception">異常なし</string>
    <string name="action_need_confirm">要確認</string>
    <string name="action_ok">OK</string>
    <string name="action_ng">NG</string>
    <string name="action_back">戻る</string>
    <string name="action_measure">測定開始</string>
    <string name="action_normal">平常</string>
    <string name="action_go_up">高め</string>
    <string name="prcessing_server">通信中</string>
    <string name="network_error">ネットワークエラーが発生しました</string>
    <string name="check_brake_pedal_title">ブレーキペダル</string>
    <string name="check_brake_pedal_info">踏みしろ、ブレーキのきき</string>
    <string name="check_park_title">駐車ブレーキ・レバー</string>
    <string name="check_park_info">引きしろ（踏みしろ）</string>
    <string name="check_prime_mover_title">原動機</string>
    <string name="check_prime_mover_info">かかり具合、異音</string>
    <string name="check_prime_mover_speed_title">原動機</string>
    <string name="check_prime_mover_speed_info">低速・加速の状態</string>
    <string name="check_window_washer_title">ウィンド・ウォッシャ</string>
    <string name="check_window_washer_info">噴射状態</string>
    <string name="check_wiper_title">ワイパー</string>
    <string name="check_wiper_info">拭き取りの状態</string>
    <string name="check_air_brake_stroke_title">エアブレーキ・ペダル</string>
    <string name="check_air_brake_stroke_info">ブレーキ・チャンバのロッドのストローク</string>
    <string name="check_air_brake_drum_title">エアブレーキ・ペダル</string>
    <string name="check_air_brake_drum_info">ドラムとライニングとのすき間</string>
    <string name="check_air_pressure_title">空気圧力計</string>
    <string name="check_air_pressure_info">空気圧力の上がり具合</string>
    <string name="check_brake_valve_title">ブレーキ・バルブ</string>
    <string name="check_brake_valve_info">排気音</string>
    <string name="check_wind_washer_tank_title">ウインド・ウォッシャ・タンク</string>
    <string name="check_wind_washer_tank_info">液量</string>
    <string name="check_brake_reservoir_tank_title">ブレーキのリザーバ・タンク</string>
    <string name="check_brake_reservoir_tank_info">液量</string>
    <string name="check_battery_title">バッテリ</string>
    <string name="check_battery_info">液量</string>
    <string name="check_radiator_title">ラジエータなどの冷却装置</string>
    <string name="check_radiator_info">水量</string>
    <string name="check_engine_oil_title">潤滑装置</string>
    <string name="check_engine_oil_info">エンジン・オイルの量</string>
    <string name="check_fan_belt_title">ファン・ベルト</string>
    <string name="check_fan_belt_info">張り具合、損傷</string>
    <string name="check_light_device_title">灯火装置、方向指示器</string>
    <string name="check_light_device_info">点灯・点灯具合、汚れ、損傷</string>
    <string name="check_tire_air_pressure_title">タイヤ</string>
    <string name="check_tire_air_pressure_info">空気圧</string>
    <string name="check_tire_crack_title">タイヤ</string>
    <string name="check_tire_crack_info">亀裂、損傷</string>
    <string name="check_tire_degrade_title">タイヤ</string>
    <string name="check_tire_degrade_info">異常な摩耗</string>
    <string name="check_tire_groove_title">タイヤ</string>
    <string name="check_tire_groove_info">溝の深さ</string>
    <string name="check_tire_nut_title">タイヤ</string>
    <string name="check_tire_nut_info">ホイール・ナット取付状態</string>
    <string name="check_air_tank_title">エアタンク</string>
    <string name="check_air_tank_info">タンク内の凝水</string>
    <string name="check_warning_light_title">警告灯</string>
    <string name="check_warning_light_info">点灯</string>
    <string name="check_body_temperature_title">体温</string>
    <string name="check_max_blood_pressure_title">最高血圧</string>
    <string name="check_min_blood_pressure_title">最低血圧</string>
    <string name="check_heartbeat_title">心拍</string>
    <string name="check_body_pain_title">左胸、左肩から背中にかけて、痛みや圧迫感、締め付けられる感じがする</string>
    <string name="check_breath_title">息切れ、呼吸がしにくい</string>
    <string name="check_pules_title">脈が飛ぶ、胸部の不快感、動悸、めまいなどがある</string>
    <string name="check_numbness_title">片方の手足、顔半分の麻痺、しびれを感じる</string>
    <string name="check_talk_title">言語の障害が生じている</string>
    <string name="check_eye_title">片方の目が見えない、物が二つに見える、視野の半分が欠けるなどの障害が生じている</string>
    <string name="check_headache_title">強い頭痛がする</string>
    <string name="check_heat_title">熱はないか</string>
    <string name="check_fatigue_title">疲れは感じないか</string>
    <string name="check_feeling_title">気分が悪くないか</string>
    <string name="check_intestine_title">腹痛・吐き気・下痢</string>
    <string name="check_drawsiness_title">眠気を感じないか</string>
    <string name="check_pain_title">怪我などの痛み</string>
    <string name="check_take_medicine_title"> 運転に悪影響のある\n薬を服用していくか</string>
    <string name="check_crew_back_before">乗務前点呼メニュー</string>
    <string name="check_crew_back_after">乗務後点呼メニュー</string>
    <string name="login_title">ログイン</string>
    <string name="login_prompt_jgsid">事業者ID</string>
    <string name="login_prompt_car_number">車両番号</string>
    <string name="login_prompt_userid">ユーザーID</string>
    <string name="login_prompt_password">パスワード</string>
    <string name="login_error">ユーザーIDまたはパスワードが正しくありません</string>
    <string name="auth_title">認証のために免許証を撮影してください</string>
    <string name="auth_camera">バックカメラ映像</string>
    <string name="auth_camera_result">免許証確認の結果表示</string>
    <string name="menu_title">メニュー</string>
    <string name="menu_call">点呼</string>
    <string name="menu_day_check"><Data><![CDATA[日常点検]]></Data></string>
    <string name="menu_before_crew_call"><Data><![CDATA[乗務前点呼]]></Data></string>
    <string name="menu_after_crew_call"><Data><![CDATA[乗務後点呼]]></Data></string>
    <string name="day_check_start_title">点検メニュー</string>
    <string name="day_check_start_button">日常点検開始</string>
    <string name="day_check_history_button">履歴</string>
    <string name="engine_title">エンジンの始動</string>
    <string name="engine_start_info">「エンジンを始動してください。」\n等を表示する</string>
    <string name="car_title">車両選択</string>
    <string name="car_spinner_label">車両</string>
    <string name="car_spinner_prompt">OBD端末に設定した車両番号</string>
    <string name="car_diag_info">OBDとのペアリング結果を表示する。\n\n「データ取得中。\n目視点検を開始してください」\n\n等の表示を行う。</string>
    <string name="car_test_scan_start">OBDセンサー検索中</string>
    <string name="car_test_scan_end">検索完了</string>
    <string name="car_test_connect_ng">接続失敗</string>
    <string name="car_test_connect">接続中</string>
    <string name="car_test_start">診断中</string>
    <string name="car_selector_title">以下の車両を選択します。\nよろしいですか？</string>
    <string name="car_selector_content">車両番号：xxxx\nが選択されています。</string>
    <string name="car_selector_cancle">キャンセル</string>
    <string name="car_selector_ok">OK</string>
    <string name="visual_check_title">日常点検</string>
    <string name="day_check_confirm_title">日常点検結果</string>
    <string name="car_number">車両番号</string>
    <string name="day_before_yesterday_status">前日の状態</string>
    <string name="visual_check">目視点検</string>
    <string name="system_diag">システム診断</string>
    <string name="engine_status">エンジン</string>
    <string name="input_completed">入力は全て完了しました</string>
    <string name="collision_avoidance_status">安全衝突回避</string>
    <string name="air_bug_status">エアバック</string>
    <string name="air_conditioner_status">エアコン</string>
    <string name="day_check_show_title">入力完了</string>
    <string name="alcohol_measure_title">アルコールチェック</string>
    <string name="alcohol_measure_crew_info_before">乗務前</string>
    <string name="alcohol_measure_crew_info_after">乗務後</string>
    <string name="alcohol_measure_title_before_crew">アルコールチェック（乗務前）</string>
    <string name="alcohol_measure_title_after_crew">アルコールチェック（乗務後）</string>
    <string name="alcohol_sensor_spinner_label">アルコールセンサー選択</string>
    <string name="alcohol_sensor_spinner_prompt">アルコールセンサーの任意番号</string>
    <string name="alcohol_measure_camera_message">カメラ表示</string>
    <string name="alcohol_measure_info">測定結果を表示する。\n\n表示項目\n    ・撮影画像\n    ・アルコールデータ\n    ・チェック日時</string>
    <string name="alcohol_measure_save">保存中</string>
    <string name="alcohol_unit">mg/L</string>
    <string name="alcohol_test_FwVersion">F/W version:%1$s</string>
    <string name="alcohol_test_reserve">準備中:%1$s</string>
    <string name="alcohol_test_start">息を吹きかけてください</string>
    <string name="alcohol_test_end_ok">計測が完了しました</string>
    <string name="alcohol_test_end_no_breath">異常終了しました</string>
    <string name="alcohol_test_testing">測定中</string>
    <string name="alcohol_test_usage_count">使用回数:%1$s回</string>
    <string name="alcohol_test_warnning_start_alcohol">準備中です。アルコールに近づけないで下さい</string>
    <string name="alcohol_test_warnning_start_press">準備中です。まだ息を吹きかけないで下さい</string>
    <string name="alcohol_test_blt_select">アルコールセンサーを選択してください</string>
    <string name="alcohol_test_voltage_ok">正常電圧:%1$sV</string>
    <string name="alcohol_test_voltage_low">低電圧:%1$sV</string>
    <string name="alcohol_test_warnning_blowing">息の吹き方が間違っています</string>
    <string name="alcohol_test_warnning_usage_over">使用回数が2000回を超えました</string>
    <string name="alcohol_test_warnning_ic_read">IC読み込みができません</string>
    <string name="alcohol_test_scan_start">アルコールセンサー検索中</string>
    <string name="alcohol_test_scan_end">検索完了</string>
    <string name="alcohol_test_connect_ng">接続失敗</string>
    <string name="alcohol_test_connect">接続中</string>
    <string name="alcohol_test_default_value">-.--</string>
    <string name="call_menu_bef_title">乗務前点呼</string>
    <string name="call_menu_aft_title">乗務後点呼</string>
    <string name="call_menu_btn_check">未測定</string>
    <string name="call_menu_btn_check_ok">測定済み</string>
    <string name="call_menu_btn_check_ng">要確認</string>
    <string name="call_menu_health_self_check">健康状態(自己申告)</string>
    <string name="call_menu_heart_check">バイタルデータ測定</string>
    <string name="call_menu_heart_self_check">バイタルデータ(自己申告)</string>
    <string name="call_menu_call_method">点呼方式</string>
    <string name="call_menu_call_method_face">対面</string>
    <string name="call_menu_call_method_phone">電話</string>
    <string name="call_menu_admit_end">既に承認済みました</string>
    <string name="call_confirm_title">入力完了</string>
    <string name="alcohol_check">アルコールチェック</string>
    <string name="vital_sign_check">バイタルチェック</string>
    <string name="health_status_check">健康状態</string>
    <string name="call_confirm_heartbeat">心拍数</string>
    <string name="call_confirm_max_blood_pressure">最高血圧</string>
    <string name="call_confirm_min_blood_pressure">最低血圧</string>
    <string name="call_confirm_body_temperature">体温</string>
    <string name="vital_sensor_spinner_label">バイタルセンター選択</string>
    <string name="vital_measure_title">バイタルチェック</string>
    <string name="vital_test_heart_rate">心拍数</string>
    <string name="vital_test_r_heart_rate">安定心拍数</string>
    <string name="vital_test_stress">疲労度</string>
    <string name="vital_test_mood">緊張度</string>
    <string name="vital_test_signal_quality">測定</string>
    <string name="vital_test_default_value">---</string>
    <string name="vital_test_signal_ok">正常</string>
    <string name="vital_test_signal_ng">再測定</string>
    <string name="vital_test_msg_scan_start">バイタルセンサー検索中</string>
    <string name="vital_test_msg_scan_end">検索完了</string>
    <string name="vital_test_msg_blt_select">バイタルセンサーを選択してください</string>
    <string name="vital_test_msg_blt_pair">ペアリング中</string>
    <string name="vital_test_msg_blt_pair_end">ペアリング終了</string>
    <string name="vital_test_proc">測定中</string>
    <string name="vital_test_end_ok">測定正常終了</string>
    <string name="vital_test_end_ng">測定異常終了</string>
    <string name="vital_test_connect">接続中</string>
    <string name="vital_test_connect_ng">接続失敗</string>
    <string name="vital_test_retest">再度測定してください</string>
    <string name="vital_test_stress_no">no to minimal stress</string>
    <string name="vital_test_stress_low">low stress</string>
    <string name="vital_test_stress_mod">moderate stress</string>
</resources>