<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/titleTextViewStyle"
        android:text="@string/menu_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/day_check_button"
                style="@style/bottomButtonStyle"
                android:layout_marginTop="30dp"
                android:text="@string/menu_day_check" />

            <Button
                android:id="@+id/before_crew_call_button"
                style="@style/bottomButtonStyle"
                android:layout_marginTop="30dp"
                android:text="@string/menu_before_crew_call" />

            <Button
                android:id="@+id/after_crew_call_button"
                style="@style/bottomButtonStyle"
                android:layout_marginTop="30dp"
                android:text="@string/menu_after_crew_call" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/log_out_button"
            style="@style/bottomButtonStyle"
            android:text="@string/action_log_out" />

    </LinearLayout>

</LinearLayout>
