<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/titleTextViewStyle"
        android:text="@string/visual_check_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    style="@style/ListViewSeparator"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            style="@style/ListMainTextViewStyle"
                            android:text="@string/check_brake_pedal_title" />

                        <TextView
                            style="@style/ListSubTextViewStyle"
                            android:text="@string/check_brake_pedal_info"/>
                    </LinearLayout>

                    <ToggleButton
                        style="@style/ListOkNgButtonStyle"/>
                </LinearLayout>

                <View
                    style="@style/ListViewSeparator"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            style="@style/ListMainTextViewStyle"
                            android:text="@string/check_park_title"/>

                        <TextView
                            style="@style/ListSubTextViewStyle"
                            android:text="@string/check_park_info"/>
                    </LinearLayout>

                    <ToggleButton
                        style="@style/ListOkNgButtonStyle"/>
                </LinearLayout>

                <View
                    style="@style/ListViewSeparator"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            style="@style/ListMainTextViewStyle"
                            android:text="@string/check_prime_mover_title"/>

                        <TextView
                            style="@style/ListSubTextViewStyle"
                            android:text="@string/check_prime_mover_info" />
                    </LinearLayout>

                    <ToggleButton
                        style="@style/ListOkNgButtonStyle"/>
                </LinearLayout>

                <View
                    style="@style/ListViewSeparator"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            style="@style/ListMainTextViewStyle"
                            android:text="@string/check_prime_mover_speed_title"/>

                        <TextView
                            style="@style/ListSubTextViewStyle"
                            android:text="@string/check_prime_mover_speed_info"/>
                    </LinearLayout>

                    <ToggleButton
                        style="@style/ListOkNgButtonStyle"/>
                </LinearLayout>

                <View
                    style="@style/ListViewSeparator"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            style="@style/ListMainTextViewStyle"
                            android:text="@string/check_window_washer_title"/>

                        <TextView
                            style="@style/ListSubTextViewStyle"
                            android:text="@string/check_window_washer_info"/>
                    </LinearLayout>

                    <ToggleButton
                        style="@style/ListOkNgButtonStyle"
                        android:checked="true"/>
                </LinearLayout>

                <View
                    style="@style/ListViewSeparator"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            style="@style/ListMainTextViewStyle"
                            android:text="@string/check_wiper_title"/>

                        <TextView
                            style="@style/ListSubTextViewStyle"
                            android:text="@string/check_wiper_info"/>
                    </LinearLayout>

                    <ToggleButton
                        style="@style/ListOkNgButtonStyle"
                        android:checked="true"/>
                </LinearLayout>

                <View
                    style="@style/ListViewSeparator"/>
            </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/back_button"
            style="@style/backButtonStyle"/>

        <Button
            android:id="@+id/next_button"
            style="@style/nextButtonStyle"/>
    </LinearLayout>

</LinearLayout>
