<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/call_menu_title"
        style="@style/titleTextViewStyle"
        android:text="@string/call_menu_bef_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--アルコールチェック-->

                <View
                    style="@style/ListViewSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp">

                    <TextView
                        style="@style/ListTextViewStyle"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:text="@string/alcohol_check" />

                    <Button
                        android:id="@+id/alcohol_check_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/call_menu_btn_check" />

                </LinearLayout>


                <!-- 健康状態自己申告 -->
                <View
                    android:id="@+id/health_check_self_separator"
                    style="@style/ListViewSeparator" />

                <LinearLayout
                    android:id="@+id/health_check_self_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp">

                    <TextView
                        style="@style/ListTextViewStyle"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:text="@string/call_menu_health_self_check" />

                    <Button
                        android:id="@+id/health_check_self_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/call_menu_btn_check" />

                </LinearLayout>


                <!--バイタルデータ測定-->
                <View
                    android:id="@+id/heart_check_separator"
                    style="@style/ListViewSeparator" />

                <LinearLayout
                    android:id="@+id/heart_check_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp">

                    <TextView
                        style="@style/ListTextViewStyle"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:text="@string/call_menu_heart_check" />

                    <Button
                        android:id="@+id/heart_check_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/call_menu_btn_check" />

                </LinearLayout>



                <!-- バイタルデータ申告 -->
                <View
                    android:id="@+id/heart_check_self_separator"
                    style="@style/ListViewSeparator" />

                <LinearLayout
                    android:id="@+id/heart_check_self_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp">

                    <TextView
                        style="@style/ListTextViewStyle"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:text="@string/call_menu_heart_self_check" />

                    <Button
                        android:id="@+id/heart_check_self_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/call_menu_btn_check" />

                </LinearLayout>


                <!-- 点呼方式 -->
                <View
                    android:id="@+id/call_method_separator"
                    style="@style/ListViewSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp">

                    <TextView
                        style="@style/ListTextViewStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/call_menu_call_method" />

                    <Button
                        android:id="@+id/call_method_face_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/call_menu_call_method_face" />


                    <Button
                        android:id="@+id/call_method_phone_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/call_menu_call_method_phone" />


                </LinearLayout>


                <View
                    android:id="@+id/call_confirm_end_separator"
                    style="@style/ListViewSeparator" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/msg"
        style="@style/MessageStyle"
        android:text="@string/input_completed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/menu_button"
            style="@style/bottomButtonStyle"
            android:text="@string/action_menu" />

    </LinearLayout>

</LinearLayout>
