<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_selector_title"
        android:textColor="@color/colorGreen"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        style="@style/ListViewSeparator"
        android:background="@color/colorGreen" />

    <TextView
        android:id="@+id/car_selector_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/car_selector_content"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        style="@style/ListViewSeparator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/cancle_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/car_selector_cancle"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/car_selector_ok"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
