<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/titleTextViewStyle"
        android:text="@string/day_check_show_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    style="@style/ListViewSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        style="@style/ListTextViewStyle"
                        android:text="@string/visual_check" />

                    <ToggleButton
                        style="@style/ListNeedConfirmOrNotButtonStyle"/>
                </LinearLayout>

                <View
                    style="@style/ListViewSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="5dp">

                    <TextView
                        style="@style/ListTextViewStyle"
                        android:text="@string/system_diag" />

                    <ToggleButton
                        style="@style/ListNeedConfirmOrNotButtonStyle"
                        android:checked="true"/>
                </LinearLayout>

                <View
                    style="@style/ListViewSeparator" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="80dp"
                android:text="@string/input_completed" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/menu_button"
            style="@style/bottomButtonStyle"
            android:text="@string/action_menu" />

    </LinearLayout>

</LinearLayout>
